# pparse

./: .gitignore  Justfile  MANIFEST.in  README.md  create-bundle.sh  decode.py  env.sh  notes.md  pyproject.toml  pytest.sh  share-link.txt  test.json  test.py
docs/: 0-docs.md  metadata-tail.yaml  metadata.yaml
docs/manual/: build-docs.sh
docs/notes/: mnn-notes.md  model-attrs.md  nn-flow.drawio  notes.md  tflite-notes.md
docs/scratch/: caps.md
old-pparse/cli/: parse.py
old-pparse/decoder/json/: __init__.py
old-pparse/lib/: pobj.py  utils.py
proto/: ge_ir.pb  onnx.pb
scripts/: build-dev-pkgs.sh  build-pkgs.sh  create-bundle.sh  pytest.sh
tests/: do_get_graph__not_working.py  do_safetensors_index.py  do_safetensors_index_parser.py  do_safetensors_index_view.py  do_safetensors_view.py  extract_pb.py  extract_safetensors.py  guess_pb.py  test_pparse.py
tests/data/models/gpt2/: collector.sh
tests/data/models/whisper/: collector.sh
tests/data/simple/: test2.json
tests/labs/: create_transformers.py  extract_pklops.py  extract_safetensors.py  extract_zip.py  person.proto  read_om.py  read_onnx.py  read_safetensors.py  test-server.py  test_fb.py  test_proto_serial.py
tests/labs/mnn/MNN/: AsString.py  Attribute.py  BatchMatMulParam.py  BatchNorm.py  CastParam.py  Convolution3D.py  CoordinateTransformationMode.py  Crop.py  CumSum.py  DataType.py  Dequantize.py  DetectionOutput.py  DetectionPostProcessParam.py  Eltwise.py  EltwiseInt8.py  ExpandDims.py  ExtraInfo.py  Flatten.py  FmhaV2Param.py  ForwardType.py  FusedActivation.py  IDSTQuan.py  IfParam.py  ImageProcessParam.py  Input.py  Interp.py  LRN.py  LSTM.py  LayerNorm.py  LinearAttentionParam.py  ModeFormat.py  MomentsParam.py  NetSource.py  OpType.py  PackParam.py  Plugin.py  Pool3D.py  PoolType.py  Proposal.py  QuantizeAlgo.py  (+28 more)
tests/labs/refonly/: do_get_graph__not_working.py  do_safetensors_view.py  extract_pklops.py  try_fickling.py
tests/labs/refonly/legacy/: pickle.py
tests/labs/refonly/mnn/: parse.py
tests/labs/refonly/mnn/MNN/: ArgMax.py  AttentionParam.py  AvgPoolCountType.py  Axis.py  BinaryOp.py  BinaryOpOperation.py  Blob.py  BorderMode.py  Convolution2D.py  Convolution2DCommon.py  Convolution3DCommon.py  CropAndResize.py  CropAndResizeMethod.py  DepthSpaceParam.py  DepthToSpaceMode.py  ELU.py  EltwiseType.py  Extra.py  Fill.py  FilterType.py  FmhcaParam.py  Gather.py  GatherV2.py  GridSample.py  GroupNorm.py  ImageFormatType.py  InnerProduct.py  LSTMBlockCell.py  ListValue.py  LoopParam.py  MNN_DATA_FORMAT.py  MatMul.py  NamedAttrList.py  Net.py  NonMaxSuppressionV2.py  Normalize.py  OneHotParam.py  Op.py  OpParameter.py  PRelu.py  (+40 more)
tests/labs/refonly/om/: read_om.py  test.py  test2.py
tests/labs/refonly/tflite/: parse.py
tests/labs/refonly/tflite/vibes/: test.py  test2.py  test3.py  test4.py
tests/labs/rknn/: fbscan.py  fbtable.py  mine.py  notes.md  rknn_parser.py  test.py
tests/labs/rust/pparsers/: Cargo.toml
tests/labs/rust/pparsers/python/: _native.py  test.py
tests/labs/rust/pparsers/src/: arena.rs  error.rs  lib.rs  parser.rs
tests/labs/rust/refs/: .gitignore  Cargo.toml  build_and_run.sh  check.sh  test.json
tests/labs/rust/refs/src/: main.rs  pparse.rs  sys.rs
tests/labs/rust/refs/src/pparse/: node.rs  parser.rs
tests/labs/rust/refs/src/pparse/lazy/: json.rs
tests/labs/rust/refs/src/pparse/lazy/json/: jsonnode.rs  parser.rs  state.rs
tests/labs/rust/refs/src/pparse/view/: json.rs
tests/labs/rust/refs/src/sys/: cstdlib.rs  debug.rs  panic.rs  print.rs
tests/labs/rust/simple/: .gitignore  Cargo.toml  build.sh
tests/labs/rust/simple/src/: alloc.rs  io.rs  lib.rs  main.rs  panic.rs  writebuf.rs
tests/labs/safetensors/: parse.py  pt_to_safetensors.py
tests/old/: extract_json.py  extract_pklops.py  extract_zip.py  read_onnx.py  read_safetensors.py  try_pb.py
tflite/: schema.js
