[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thirdparty-pparse"
version = "0.0.1"
description = "Partial Parsing"
# Note: No idea the real version required at this time.
requires-python = ">=3.9"

dependencies = [
    "torch",
    #"torchaudio",
    #"torchvision",
    "numpy",
    "protobuf"
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[project.scripts]
pparse = "thirdparty.pparse.cli:main"

[project.entry-points."yannt_command"]
# Register pparse as a yannt subcommand
pparse = "thirdparty.pparse.cli.yannt_plugin:register_pparse"

[project.entry-points."pparse_command"]

# Register safetensors as a pparse subcommand
safetensors = "thirdparty.pparse.cli.pparse_safetensors:register_pparse_safetensors"

# Register pytorch as a pparse subcommand
pytorch = "thirdparty.pparse.cli.pparse_pytorch:register_pparse_pytorch"

# Register transformers as a pparse subcommand
transformers = "thirdparty.pparse.cli.pparse_transformers:register_pparse_transformers"

# Register ident as a pparse subcommand
ident = "thirdparty.pparse.cli.pparse_ident:register_pparse_ident"
