[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thirdparty-pparse"
description = "Partial Parsing"

# Note: No idea the real version required at this time.
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "protobuf",
    "flatbuffers"
]

# Requires PEP 621 (setuptools>=61)
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}


[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"thirdparty_pparse" = [
    "data/proto/*.pb",
    "data/proto/*.proto",
    "data/proto/*.proto3",
    "data/fbs/*.fbs",
]

[project.scripts]
pparse = "thirdparty.pparse.cli:main"

[project.entry-points."yannt_command"]
# Register pparse as a yannt subcommand
pparse = "thirdparty.pparse.cli.yannt_plugin:register_pparse"

[project.entry-points."pparse_command"]

# Register safetensors as a pparse subcommand
safetensors = "thirdparty.pparse.cli.pparse_safetensors:register_pparse_safetensors"

# Register pytorch as a pparse subcommand
pytorch = "thirdparty.pparse.cli.pparse_pytorch:register_pparse_pytorch"

# Register ident as a pparse subcommand
ident = "thirdparty.pparse.cli.pparse_ident:register_pparse_ident"
